rewrite and add more integrator schemes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-mdevolve
-test1
 nimcache/
+test_v0
+tshared_v0
+t000leapfrog
+t001rleapfrog
+t002recursive
+t003forcegradient
+t004sharedTest
+t005shared
+t006approximateFG
+t007combo
+doc/devel
